# mini-claw

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  eslint.config.js  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
skills/playwright/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
skills/playwright/src/: browser.rs  browser.ts  index.ts  main.rs
skills/playwright/src/commands/: content.rs  content.ts  interact.rs  interact.ts  mod.rs  navigate.rs  navigate.ts  screenshot.rs  screenshot.ts  wait.rs  wait.ts
src/: bot.test.ts  bot.ts  config.rs  config.test.ts  config.ts  error.rs  file-detector.test.ts  file-detector.ts  file_detector.rs  index.ts  main.rs  markdown.rs  markdown.ts  pi-runner.test.ts  pi-runner.ts  pi_rpc.rs  pi_runner.rs  rate-limiter.test.ts  rate-limiter.ts  rate_limiter.rs  sessions.rs  sessions.test.ts  sessions.ts  workspace.rs  workspace.test.ts  workspace.ts
src/bot/: callbacks.rs  commands.rs  handlers.rs  mod.rs  util.rs
