[package]
name = "pw"
version = "0.1.0"
edition = "2021"
description = "Browser automation CLI using Chrome DevTools Protocol"

[[bin]]
name = "pw"
path = "src/main.rs"

[dependencies]
chromiumoxide = { version = "0.8", features = ["tokio-runtime"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
futures = "0.3"
